--- a/estilos.css
+++ b/estilos.css
@@ -44,3 +44,8 @@ body{
     border-radius: 8px;
     text-decoration: none;
 }
+.link{
+    margin-top: 0px;
+    margin-left: 260px;
+    text-decoration: none;
+}
