--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -367,16 +367,36 @@ form.sign-up-form{
     color: #696969;
     margin-bottom: 10px;
 }
+.title-request{
+    font-size: 2.2rem;
+    margin-bottom: 10px;
+}
 .input-field{
     max-width: 380px;
     width: 100%;
     height: 55px;
     background-color: #f0f0f0;
+
     margin: 10px 0;
     border-radius: 55px;
+    align-items: center;
     display: grid;
     grid-template-columns: 15% 85%;
     padding: 0 .4rem;
+}
+.text-request{
+    max-width: 450px;
+    color: #696969;
+    width: 100%;
+    height: 55px;
+    margin: 0px 0;
+    grid-template-columns: 15% 85%;
+    padding: 0 .4rem;
+}
+.input-field-p{
+    font-style: normal;
+    font-size:35px;
+    font-weight: 800;
 }
 .input-field i{
   text-align: center;
@@ -457,7 +477,7 @@ form.sign-up-form{
     background: none;
     border: 2px solid #FA4848;
     width: 130px;
-    height: 41px;
+    height: 70px;
     font-weight: 600;
     font-size: 0.8rem;
 }
