--- a/public/css/main.css
+++ b/public/css/main.css
@@ -224,12 +224,16 @@ nav a:hover{
     background:linear-gradient(89.59deg, rgba(255, 224, 135, 0) -28.52%, #FFE087 108.73%);
     border-radius: 50px;
 }
+.logo img{
+  width: 100px;
+}
+
 .tarjetas{
     position: absolute;
     width: 467px;
-    height: 681px;
+    height: 245px;
     left: 826px;
-    top: 200px;
+    top: 132px;
 
     background: linear-gradient(163.82deg, rgba(255, 224, 135, 0.17) -33.32%, #FFE087 104.62%);
     background-blend-mode: darken;
@@ -237,11 +241,13 @@ nav a:hover{
 }
 .transacciones{
     position: absolute;
-    width: 747px;
+    width: 1245px;
     height: 504px;
     left: 46px;
     top: 421px;
-    background:#9A9A9A;
+}
+.transacciones p{
+  text-align: center;
 }
 @media screen and (max-width:768px){
 
