--- a/public/css/main.css
+++ b/public/css/main.css
@@ -341,6 +341,70 @@ main .transacciones h2{
   background: linear-gradient(270deg, rgba(252, 0, 60, 0.42)-12.08%, rgba(5, 0, 252, 0.62) 24.26%, #FFB8B8 108.23%);
   border-radius: 24px;
 }
+.elipse{
+  position: absolute;
+  width: 92px;
+  height: 85px;
+  left: 67px;
+  top: 55px;
+  border-radius: 100px;
+  text-align: center;
+
+  background: linear-gradient(165.12deg, rgba(123, 123, 123, 0.21) 10.5%, rgba(123, 123, 123, 0.49) 85.67%);
+}
+.txt{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  gap: 7.13px;
+
+  position: absolute;
+  width: 68.94px;
+  height: 31.05px;
+  left: 10px;
+  top: 20px;
+}
+.txt h6{
+  color: #fff;;
+}
+.txt p{
+  font-size: 11px;
+  color: #e7e7e7;
+}
+/*.elipse p{
+  font-size: 11px;
+  margin-top: 55px;
+  color: #E7E7E7;
+}*/
+.ingreso{
+  position: absolute;
+  width: 112px;
+  height: 73.34px;
+  left: 230px;
+  top: 10px;
+
+  background: linear-gradient(300.87deg, rgba(231, 76, 60, 0.58) -14.54%, rgba(239, 169, 43, 0.67) 121.27%);
+  border-radius: 13.2273px;
+}
+.ingreso p{
+  font-size: 12px;
+  margin-left: 10px;
+}
+.gasto{
+  position: absolute;
+  width: 111.63px;
+  height: 68.54px;
+  left: 230px;
+  top: 95px;
+
+  background: linear-gradient(119.25deg, rgba(250, 72, 72, 0.5) -22.91%, rgba(255, 0, 0, 0.25) 111.3%);
+  border-radius: 13.2167px;
+}
+.gasto p{
+  font-size: 12px;
+  margin-left: 10px;
+}
 
 @media screen and (max-width:768px){
 
