--- a/public/css/main.css
+++ b/public/css/main.css
@@ -581,3 +581,13 @@ main .transacciones h2{
       margin: 1rem 0;
     }
 }
+.imagen {
+  margin-left:46px ;
+  width: 49%;
+  height: 100%;
+}
+.img {
+  width: 100%;
+  height: 112%;
+  margin-top: -27px;
+}
